# PythonVSJavaDatenanalyseTest

./: .gitignore  README.md  run-benchmarks  run-benchmarks-mac  run-benchmarks-windows.ps1
data-gen/: README.md  generate_parquet.py  pyproject.toml
java/: pom.xml
python/: README.md  main.py  pyproject.toml
python/benchmarking/: run_pandas_benchmarks.py  run_polars_benchmarks.py
python/benchmarking/default/: default_values.py  invocation_loop.py  time_cpu_measurement.py
python/benchmarking/run_pandas/: __init__.py  filter_benchmark.py  group_count_benchmark.py  join_benchmark.py  pivot_benchmark.py  read_benchmark.py  sort_benchmark.py
python/benchmarking/run_polars/: __init__.py  filter_benchmark.py  group_count_benchmark.py  join_benchmark.py  pivot_benchmark.py  read_benchmark.py  sort_benchmark.py
python/pandas/: README.md  filter_pandas.py  groupCount_pandas.py  join_pandas.py  pivot_pandas.py  sort_pandas.py
python/pandas_logic/: __init__.py  logic.py
python/polars/: README.md  benchmark.py  filter_polars.py  groupCount_polars.py  join_polars.py  load_datasets.py  paths.py  pivot_polars.py  sort_polars.py
python/polars/benchmarking/: read_benchmark.py  run_benchmarks.py
python/polars/benchmarking/default/: default_functions.py  default_values.py
python/polars/benchmarking/run/: __init__.py  read_benchmark.py
python/polars_src/: README.md
python/polars_src/benchmarking/: run_benchmarks.py
python/polars_src/benchmarking/default/: default_functions.py  default_values.py  invocation_loop.py  print_csv.py  (+2 more)
python/polars_src/logic/: logic.py
(+33 files in other folders)
