[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-benchmarks"
version = "0.1.0"
description = "Python benchmark suite for Polars and Pandas comparisons."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0.0",
  "polars>=1.0.0",
  "psutil>=5.9.0",
  "pyarrow>=14.0.0",
]

[project.scripts]
polars-benchmarks = "benchmarking.run_polars_benchmarks:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarking*", "polars_logic*"]
